# lmu-mlops-project

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  batch.pkl  cloudbuild.yaml  environment.yaml  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt
.dvc/: config
.github/workflows/: test.yaml  trigger-cloudbuild.yaml
api/: main.py
cloudbuild/: build_docker_images.yaml  config_gpu.yaml  vertex_ai_train.yaml
data/: raw.dvc
dockerfiles/: hatespeech_base.dockerfile  inference_api.dockerfile  predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
lightning_logs/version_0/: events.out.tfevents.1719579223.Julias-MacBook-Pro.local.77594.0  hparams.yaml
lightning_logs/version_13/: metrics.csv
mlops_project/: __init__.py  checkpoints.dvc  hate_speech_model.py  model_lightning.py  models.dvc  predict_model.py  pyvenv.cfg  train_model.py  train_model_lightning.py  train_model_lightning_old.py
mlops_project/config/: config-defaults-sweep.yaml  config-defaults.yaml
mlops_project/data/: make_dataset.py  make_raw_dataset.py  utils.py
mlops_project/models/saved_models/: bsc_weights.pth
reports/: README.md
tests/: api_performance_locustfile.py  test_api.py  test_data.py  test_hate_speech_model.py  test_model_lightning.py  test_predict_model.py  test_train_model_lightning.py  test_utils.py
utils/: utils_functions.py
wandb/: latest-run
wandb/run-20240701_112653-xb3d8zvm/: run-xb3d8zvm.wandb
wandb/run-20240701_112653-xb3d8zvm/files/: config.yaml  requirements.txt  (+2 more)
wandb/run-20240701_112738-a91e5iyy/: run-a91e5iyy.wandb
wandb/run-20240701_192132-2jk20zuk/: run-2jk20zuk.wandb
(+8 files in other folders)
