[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_project"
version = "0.0.1"
description = "This project is taking place in context of the MLOps lecture. The overall goal of the project is to classify human and machine generated tweets for deep fake social media text detection."
authors = [
  { name = "Oezeren, Gloukhman, Broden, Schuettpelz", email = "your@email.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12.3"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["mlops_project"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
